--- a/.config/bat/bat.conf
+++ b/.config/bat/bat.conf
@@ -1,5 +1,5 @@
 # Set the theme to "TwoDark"
---theme="OneHalfDark"
+--theme="Visual Studio Dark+"
 
 # Show line numbers, Git modifications and file header (but no grid)
 --style="numbers,changes,header,grid"
